[package]
name = "xfrm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
icu_collator = { path = "../icu4x/components/collator", default-features = false, features = ["compiled_data"] }
icu_locale = { path = "../icu4x/components/locale", default-features = false, features = ["compiled_data"] }
icu_provider = { path = "../icu4x/provider/core", default-features = false, features = ["alloc", "logging"] }
